@startuml

title __ENTITIES's Class Diagram__\n

  namespace com.journear.app {
    namespace core {
      namespace entities {
        class com.journear.app.core.entities.DuplicateItemException {
        }
      }
    }
  }
  

  namespace com.journear.app {
    namespace core {
      namespace entities {
        class com.journear.app.core.entities.JnGeocodeItem {
            + id : String
            + latitude : double
            + longitude : double
            + placeString : String
            {static} - serialVersionUID : long
            + equals()
            + hashCode()
            + toString()
        }
      }
    }
  }
  

  namespace com.journear.app {
    namespace core {
      namespace entities {
        class com.journear.app.core.entities.NearbyDevice {
            {static} + CREATOR : Creator<NearbyDevice>
            - destination : String
            - id : int
            - source : String
            - travelTime : Time
            - user_rating : String
            + NearbyDevice()
            + NearbyDevice()
            + describeContents()
            + equals()
            + getDestination()
            + getDestination2()
            + getId()
            + getSource()
            + getSource2()
            + getTravelTime()
            + getUser()
            + getUser_rating()
            + hashCode()
            + setDestination()
            + setDestination2()
            + setDestination2()
            + setId()
            + setSource()
            + setSource2()
            + setSource2()
            + setTravelTime()
            + setTravelTime()
            + setUser()
            + setUser_rating()
            + writeToParcel()
            # NearbyDevice()
        }
      }
    }
  }
  

  namespace com.journear.app {
    namespace core {
      namespace entities {
        class com.journear.app.core.entities.StringWrapper {
            ~ toWrap : String
            + StringWrapper()
            + toString()
        }
      }
    }
  }
  

  namespace com.journear.app {
    namespace core {
      namespace entities {
        class com.journear.app.core.entities.User {
            + dobValue : String
            + email : String
            + password : String
            + phoneValue : String
            + userID : String
            + User()
            + getDob()
            + getEmail()
            + getPassword()
            + getPhone()
            + setDobValue()
            + setEmail()
            + setPassword()
            + setPhoneValue()
            + setUserID()
        }
      }
    }
  }
  

  namespace com.journear.app {
    namespace core {
      namespace entities {
        class com.journear.app.core.entities.UserSkimmed {
            + gender : String
            + userName : String
            + getGender()
            + getUserName()
            + isSameAs()
            + setGender()
            + setUserName()
        }
      }
    }
  }
  

  com.journear.app.core.entities.JnGeocodeItem .up.|> java.io.Serializable
  com.journear.app.core.entities.JnGeocodeItem .up.|> java.lang.Cloneable
  com.journear.app.core.entities.NearbyDevice .up.|> android.os.Parcelable
  com.journear.app.core.entities.NearbyDevice .up.|> com.journear.app.core.interfaces.Persistable
  com.journear.app.core.entities.NearbyDevice o-- com.journear.app.core.entities.JnGeocodeItem : destination2
  com.journear.app.core.entities.NearbyDevice o-- com.journear.app.core.entities.JnGeocodeItem : source2
  com.journear.app.core.entities.NearbyDevice o-- com.journear.app.core.entities.UserSkimmed : user
  com.journear.app.core.entities.StringWrapper .up.|> com.journear.app.core.interfaces.Persistable
  com.journear.app.core.entities.User .up.|> com.journear.app.core.interfaces.Persistable
  com.journear.app.core.entities.User -up-|> com.journear.app.core.entities.UserSkimmed
  com.journear.app.core.entities.UserSkimmed .up.|> com.journear.app.core.interfaces.Persistable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
